cambios asincronia hechos

--- a/style.css
+++ b/style.css
@@ -4,24 +4,38 @@
 }
 
 .contenedor {
-    max-width: 1200px;
+    max-width: 700px;
     margin: 0 auto;
 }
 
+#sectionBtn {
+    margin-top: 70px;
+}
+
+
 h1 {
     text-align: center;
+    margin-top: 40px;
+    font-size: larger;
+}
+
+p {
+    margin: -17.5px 0px -30px 0px;
+    font-size: small;
+    color: rgb(191, 0, 0);
+    font-weight: 700;
 }
 
 input {
-    padding: 5px 10px;
+    padding: 4px 10px;
     float: right;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 #btn {
     background-color: blue;
     color: white;
-    padding: 7px 10px;
+    padding: 6px 10px;
     margin-right: 10px;
     border: none;
     border-radius: 5px;
@@ -30,24 +44,29 @@ input {
 
 #btn:hover {
     cursor: pointer;
-    background-color: green;
+    background-color: darkblue;
 }
 
 table {
-    margin-top: 40px;
+    margin-top: 0px;
     width: 100%;
     text-align: center;
     font-size: small;
     border-collapse: collapse;
 }
 
-tr {
-    display: flex;
-    justify-content: space-between;
-}
-
 th, td {
     border-top: 1px solid grey;
     border-bottom: 1px solid grey;
     padding: 5px;
+}
+
+thead tr {
+    background-color: rgba(228, 238, 255, 0.699);
+    height: 30px;
+}
+
+tbody tr {
+    background-color: rgba(244, 248, 255, 0.797);
+    height: 30px;
 }
